PR target/58269 * config/i386/i386.c (ix86_conditional_register_usage): Proper initialize extended SSE registers.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@202318 138bc75d-0d04-0410-961f-82ee72b054a4